Remove hand-written ServiceLoader services
@MetaInfServices provides automatic generation of these files, hence
use it to make bindings to code more explicit.

JIRA: BGPCEP-937
Change-Id: I9a4a5627cddfdd7898b83414404d1cae069795ed
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>