@@ -7,10 +7,11 @@
  */
 package org.opendaylight.protocol.bgp.linkstate.impl;
 
-import java.util.Collections;
 import java.util.List;
+import org.kohsuke.MetaInfServices;
 import org.opendaylight.mdsal.binding.dom.codec.api.BindingNormalizedNodeSerializer;
 import org.opendaylight.protocol.bgp.rib.spi.AbstractRIBExtensionProviderActivator;
+import org.opendaylight.protocol.bgp.rib.spi.RIBExtensionProviderActivator;
 import org.opendaylight.protocol.bgp.rib.spi.RIBExtensionProviderContext;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.linkstate.rev200120.LinkstateAddressFamily;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.linkstate.rev200120.LinkstateSubsequentAddressFamily;
@@ -19,11 +20,12 @@ import org.opendaylight.yangtools.concepts.Registration;
 /**
  * Activator for registering Linkstate AFI/SAFI to RIB.
  */
+@MetaInfServices(value = RIBExtensionProviderActivator.class)
 public final class RIBActivator extends AbstractRIBExtensionProviderActivator {
     @Override
     protected List<Registration> startRIBExtensionProviderImpl(final RIBExtensionProviderContext context,
             final BindingNormalizedNodeSerializer mappingService) {
-        return Collections.singletonList(context.registerRIBSupport(LinkstateAddressFamily.class,
+        return List.of(context.registerRIBSupport(LinkstateAddressFamily.class,
                 LinkstateSubsequentAddressFamily.class, LinkstateRIBSupport.getInstance(mappingService)));
     }
 }
